Update src/main/java/seedu/address/logic/parser/ViewCommandParser.java
Co-authored-by: Cxyu629 <52622839+Cxyu629@users.noreply.github.com>