@@ -16,7 +16,8 @@ public class ViewCommandParser implements Parser<ViewCommand> {
      * @throws ParseException if the user input does not conform the expected format
      */
     public ViewCommand parse(String args) throws ParseException {
-        if (args == null || args.trim().isEmpty()) {
+        assert args != null;
+        if (args.isBlank()) {
             throw new ParseException(Messages.getCommandErrorWithUsage(
                     Messages.MESSAGE_MISSING_INDEX, ViewCommand.MESSAGE_USAGE));
         }
